<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.makanyab.ProfileFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="30dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/etMyName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:hint="@string/FirstName"
            android:inputType="text"
            android:textColorHint="@color/colorPrimaryDark" />


        <EditText
            android:id="@+id/etMyNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etMyName"
            android:hint="@string/LastName"
            android:inputType="phone"
            android:textColorHint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etMyNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/Save" />

    </RelativeLayout>
</FrameLayout>
