<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecurityFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/etOldPass"
            android:hint="@string/old_password"
            android:gravity="right|center_vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/etNewPass"
            android:hint="@string/new_password"
            android:gravity="right|center_vertical"
            android:layout_below="@+id/etOldPass"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <Button
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:layout_below="@+id/etNewPass"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#000000"
            android:layout_below="@+id/btnSave"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:id="@+id/line"/>

        <CheckBox
            android:text="@string/hidden_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkHidden"
            android:gravity="right|center_vertical|start"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/line"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>
