<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_veiw="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    card_veiw:cardCornerRadius="5dp"
    android:id="@+id/contact_cardview">


    <LinearLayout
        android:id="@+id/contact_cardview_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="7dp"
            android:contentDescription="@string/imgDes"
            android:src="@drawable/ic_menu_person"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvContactName"
                android:layout_margin="7dp"
                android:text="@string/contactname"
                android:textColor="@color/gray_700"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvContactPhoneNumber"
                android:layout_marginLeft="10dp"
                android:text="@string/contactfamily"
                android:textColor="@color/gray_700"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/btnEdit"
                android:layout_margin="7dp"
                android:src="@drawable/ic_edit_black_20dp"
                android:tint="@color/gray_700"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/btnDelete"
                android:layout_margin="7dp"
                android:src="@drawable/ic_remove_circle_outline_black_20dp"
                android:tint="@color/gray_700"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>